(fix) Align buttons in modal

--- a/client/assets/sass/style.scss
+++ b/client/assets/sass/style.scss
@@ -230,3 +230,11 @@ line-height: normal;
 .before-btn {
   padding-top: 5px;
 }
+
+#submit-btn {
+  margin-left: 5px;
+}
+
+#cancel-btn {
+  margin-right: 20px;
+}
